--- a/notebook/edtaModel2.ipynb
+++ b/notebook/edtaModel2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fdb7064f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ca1cd893",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "03dc8777",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "4     11.5@ 4,500(kgm@ rpm)    5.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "64e5ce9b",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "(8128, 13)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "42e29b55",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,17 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "196a8f17",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(1202)"
+       "1202"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "377cb463",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5a94c45e",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ce5957c3",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ae23efba",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "Name: engine, Length: 8128, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d71a682e",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "max    2020.000000   1.000000e+07  2.360457e+06  3604.000000    14.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "id": "818153dc",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
        "      <td>First Owner</td>\n",
        "      <td>17.3 km/kg</td>\n",
        "      <td>1061.0</td>\n",
-       "      <td>57.5</td>\n",
+       "      <td>57.5 bhp</td>\n",
        "      <td>7.8@ 4,500(kgm@ rpm)</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
@@ -600,7 +600,7 @@
        "      <td>Second Owner</td>\n",
        "      <td>33.44 km/kg</td>\n",
        "      <td>796.0</td>\n",
-       "      <td>40.3</td>\n",
+       "      <td>40.3 bhp</td>\n",
        "      <td>60Nm@ 3500rpm</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
@@ -648,7 +648,7 @@
        "      <td>Fourth &amp; Above Owner</td>\n",
        "      <td>15.1 km/kg</td>\n",
        "      <td>1196.0</td>\n",
-       "      <td>73.0</td>\n",
+       "      <td>73 bhp</td>\n",
        "      <td>101Nm@ 3000rpm</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
@@ -748,23 +748,23 @@
        "8068  Diesel  Individual       Manual           First Owner          NaN   \n",
        "8103  Petrol  Individual       Manual          Second Owner          NaN   \n",
        "\n",
-       "      engine  max_power                torque  seats  \n",
-       "6     1061.0       57.5  7.8@ 4,500(kgm@ rpm)    5.0  \n",
-       "13       NaN        NaN                   NaN    NaN  \n",
-       "31       NaN        NaN                   NaN    NaN  \n",
-       "35     796.0       40.3         60Nm@ 3500rpm    4.0  \n",
-       "78       NaN        NaN                   NaN    NaN  \n",
-       "...      ...        ...                   ...    ...  \n",
-       "7913  1196.0       73.0        101Nm@ 3000rpm    5.0  \n",
-       "7996     NaN        NaN                   NaN    NaN  \n",
-       "8009     NaN        NaN                   NaN    NaN  \n",
-       "8068     NaN        NaN                   NaN    NaN  \n",
-       "8103     NaN        NaN                   NaN    NaN  \n",
+       "      engine max_power                torque  seats  \n",
+       "6     1061.0  57.5 bhp  7.8@ 4,500(kgm@ rpm)    5.0  \n",
+       "13       NaN       NaN                   NaN    NaN  \n",
+       "31       NaN       NaN                   NaN    NaN  \n",
+       "35     796.0  40.3 bhp         60Nm@ 3500rpm    4.0  \n",
+       "78       NaN       NaN                   NaN    NaN  \n",
+       "...      ...       ...                   ...    ...  \n",
+       "7913  1196.0    73 bhp        101Nm@ 3000rpm    5.0  \n",
+       "7996     NaN       NaN                   NaN    NaN  \n",
+       "8009     NaN       NaN                   NaN    NaN  \n",
+       "8068     NaN       NaN                   NaN    NaN  \n",
+       "8103     NaN       NaN                   NaN    NaN  \n",
        "\n",
        "[309 rows x 13 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,17 +775,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "3d0a3de1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['max_power']=df['max_power'].str.replace(' bhp ','')"
+    "df['max_power']=df['max_power'].str.replace(' bhp','')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "1d6fe7d4",
    "metadata": {},
    "outputs": [],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "2500d920",
    "metadata": {},
    "outputs": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "id": "c71708cb",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1097,7 @@
        "[8128 rows x 13 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "d60677c0",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1130,7 @@
        "Name: count, Length: 2058, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "216cc177",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1157,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "30826f84",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "00524aff",
    "metadata": {},
    "outputs": [],
@@ -1212,7 +1212,34 @@
    "execution_count": null,
    "id": "2323ede5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8128 entries, 0 to 8127\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   name           8128 non-null   object \n",
+      " 1   year           8128 non-null   int64  \n",
+      " 2   selling_price  8128 non-null   int64  \n",
+      " 3   km_driven      8128 non-null   int64  \n",
+      " 4   fuel           8128 non-null   object \n",
+      " 5   seller_type    8128 non-null   object \n",
+      " 6   transmission   8128 non-null   object \n",
+      " 7   owner          8128 non-null   object \n",
+      " 8   mileage        7907 non-null   object \n",
+      " 9   engine         7907 non-null   float64\n",
+      " 10  max_power      7912 non-null   float64\n",
+      " 11  torque         7906 non-null   object \n",
+      " 12  seats          7907 non-null   float64\n",
+      "dtypes: float64(3), int64(3), object(7)\n",
+      "memory usage: 825.6+ KB\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
