--- a/notebook/edtaModel2.ipynb
+++ b/notebook/edtaModel2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fdb7064f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ca1cd893",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "03dc8777",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "4     11.5@ 4,500(kgm@ rpm)    5.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "64e5ce9b",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "(8128, 13)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "42e29b55",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "196a8f17",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "1202"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "377cb463",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5a94c45e",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ce5957c3",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ae23efba",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "Name: engine, Length: 8128, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "d71a682e",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "max    2020.000000   1.000000e+07  2.360457e+06  3604.000000    14.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "818153dc",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
        "[309 rows x 13 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "3d0a3de1",
    "metadata": {},
    "outputs": [],
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "1d6fe7d4",
    "metadata": {},
    "outputs": [],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "2500d920",
    "metadata": {},
    "outputs": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "c71708cb",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1097,7 @@
        "[8128 rows x 13 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "d60677c0",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1130,7 @@
        "Name: count, Length: 2058, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "216cc177",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1157,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "30826f84",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "00524aff",
    "metadata": {},
    "outputs": [],
@@ -1212,35 +1212,338 @@
    "execution_count": null,
    "id": "2323ede5",
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "72d95a1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_to_move = df.columns[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0780e961",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_order = [col for col in df.columns if col != col_to_move] + [col_to_move]\n",
+    "df = df[new_order]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5b79dc85",
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 8128 entries, 0 to 8127\n",
-      "Data columns (total 13 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   name           8128 non-null   object \n",
-      " 1   year           8128 non-null   int64  \n",
-      " 2   selling_price  8128 non-null   int64  \n",
-      " 3   km_driven      8128 non-null   int64  \n",
-      " 4   fuel           8128 non-null   object \n",
-      " 5   seller_type    8128 non-null   object \n",
-      " 6   transmission   8128 non-null   object \n",
-      " 7   owner          8128 non-null   object \n",
-      " 8   mileage        7907 non-null   object \n",
-      " 9   engine         7907 non-null   float64\n",
-      " 10  max_power      7912 non-null   float64\n",
-      " 11  torque         7906 non-null   object \n",
-      " 12  seats          7907 non-null   float64\n",
-      "dtypes: float64(3), int64(3), object(7)\n",
-      "memory usage: 825.6+ KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>km_driven</th>\n",
+       "      <th>fuel</th>\n",
+       "      <th>seller_type</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>owner</th>\n",
+       "      <th>mileage</th>\n",
+       "      <th>engine</th>\n",
+       "      <th>max_power</th>\n",
+       "      <th>torque</th>\n",
+       "      <th>seats</th>\n",
+       "      <th>selling_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Maruti Swift Dzire VDI</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>145500</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First Owner</td>\n",
+       "      <td>23.4 kmpl</td>\n",
+       "      <td>1248.0</td>\n",
+       "      <td>74.00</td>\n",
+       "      <td>190Nm@ 2000rpm</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>450000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Skoda Rapid 1.5 TDI Ambition</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>Second Owner</td>\n",
+       "      <td>21.14 kmpl</td>\n",
+       "      <td>1498.0</td>\n",
+       "      <td>103.52</td>\n",
+       "      <td>250Nm@ 1500-2500rpm</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>370000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Honda City 2017-2020 EXi</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>140000</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>Third Owner</td>\n",
+       "      <td>17.7 kmpl</td>\n",
+       "      <td>1497.0</td>\n",
+       "      <td>78.00</td>\n",
+       "      <td>12.7@ 2,700(kgm@ rpm)</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>158000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hyundai i20 Sportz Diesel</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>127000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First Owner</td>\n",
+       "      <td>23.0 kmpl</td>\n",
+       "      <td>1396.0</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>22.4 kgm at 1750-2750rpm</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>225000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Maruti Swift VXI BSIII</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First Owner</td>\n",
+       "      <td>16.1 kmpl</td>\n",
+       "      <td>1298.0</td>\n",
+       "      <td>88.20</td>\n",
+       "      <td>11.5@ 4,500(kgm@ rpm)</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>130000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8123</th>\n",
+       "      <td>Hyundai i20 Magna</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>110000</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First Owner</td>\n",
+       "      <td>18.5 kmpl</td>\n",
+       "      <td>1197.0</td>\n",
+       "      <td>82.85</td>\n",
+       "      <td>113.7Nm@ 4000rpm</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>320000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8124</th>\n",
+       "      <td>Hyundai Verna CRDi SX</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>119000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>Fourth &amp; Above Owner</td>\n",
+       "      <td>16.8 kmpl</td>\n",
+       "      <td>1493.0</td>\n",
+       "      <td>110.00</td>\n",
+       "      <td>24@ 1,900-2,750(kgm@ rpm)</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>135000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8125</th>\n",
+       "      <td>Maruti Swift Dzire ZDi</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First Owner</td>\n",
+       "      <td>19.3 kmpl</td>\n",
+       "      <td>1248.0</td>\n",
+       "      <td>73.90</td>\n",
+       "      <td>190Nm@ 2000rpm</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>382000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8126</th>\n",
+       "      <td>Tata Indigo CR4</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>25000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First Owner</td>\n",
+       "      <td>23.57 kmpl</td>\n",
+       "      <td>1396.0</td>\n",
+       "      <td>70.00</td>\n",
+       "      <td>140Nm@ 1800-3000rpm</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>290000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8127</th>\n",
+       "      <td>Tata Indigo CR4</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>25000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First Owner</td>\n",
+       "      <td>23.57 kmpl</td>\n",
+       "      <td>1396.0</td>\n",
+       "      <td>70.00</td>\n",
+       "      <td>140Nm@ 1800-3000rpm</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>290000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8128 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              name  year  km_driven    fuel seller_type  \\\n",
+       "0           Maruti Swift Dzire VDI  2014     145500  Diesel  Individual   \n",
+       "1     Skoda Rapid 1.5 TDI Ambition  2014     120000  Diesel  Individual   \n",
+       "2         Honda City 2017-2020 EXi  2006     140000  Petrol  Individual   \n",
+       "3        Hyundai i20 Sportz Diesel  2010     127000  Diesel  Individual   \n",
+       "4           Maruti Swift VXI BSIII  2007     120000  Petrol  Individual   \n",
+       "...                            ...   ...        ...     ...         ...   \n",
+       "8123             Hyundai i20 Magna  2013     110000  Petrol  Individual   \n",
+       "8124         Hyundai Verna CRDi SX  2007     119000  Diesel  Individual   \n",
+       "8125        Maruti Swift Dzire ZDi  2009     120000  Diesel  Individual   \n",
+       "8126               Tata Indigo CR4  2013      25000  Diesel  Individual   \n",
+       "8127               Tata Indigo CR4  2013      25000  Diesel  Individual   \n",
+       "\n",
+       "     transmission                 owner     mileage  engine  max_power  \\\n",
+       "0          Manual           First Owner   23.4 kmpl  1248.0      74.00   \n",
+       "1          Manual          Second Owner  21.14 kmpl  1498.0     103.52   \n",
+       "2          Manual           Third Owner   17.7 kmpl  1497.0      78.00   \n",
+       "3          Manual           First Owner   23.0 kmpl  1396.0      90.00   \n",
+       "4          Manual           First Owner   16.1 kmpl  1298.0      88.20   \n",
+       "...           ...                   ...         ...     ...        ...   \n",
+       "8123       Manual           First Owner   18.5 kmpl  1197.0      82.85   \n",
+       "8124       Manual  Fourth & Above Owner   16.8 kmpl  1493.0     110.00   \n",
+       "8125       Manual           First Owner   19.3 kmpl  1248.0      73.90   \n",
+       "8126       Manual           First Owner  23.57 kmpl  1396.0      70.00   \n",
+       "8127       Manual           First Owner  23.57 kmpl  1396.0      70.00   \n",
+       "\n",
+       "                         torque  seats  selling_price  \n",
+       "0                190Nm@ 2000rpm    5.0         450000  \n",
+       "1           250Nm@ 1500-2500rpm    5.0         370000  \n",
+       "2         12.7@ 2,700(kgm@ rpm)    5.0         158000  \n",
+       "3      22.4 kgm at 1750-2750rpm    5.0         225000  \n",
+       "4         11.5@ 4,500(kgm@ rpm)    5.0         130000  \n",
+       "...                         ...    ...            ...  \n",
+       "8123           113.7Nm@ 4000rpm    5.0         320000  \n",
+       "8124  24@ 1,900-2,750(kgm@ rpm)    5.0         135000  \n",
+       "8125             190Nm@ 2000rpm    5.0         382000  \n",
+       "8126        140Nm@ 1800-3000rpm    5.0         290000  \n",
+       "8127        140Nm@ 1800-3000rpm    5.0         290000  \n",
+       "\n",
+       "[8128 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b924feab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "engine\n",
+       "1248.0    1017\n",
+       "1197.0     832\n",
+       "998.0      453\n",
+       "796.0      444\n",
+       "2179.0     389\n",
+       "          ... \n",
+       "2835.0       1\n",
+       "1489.0       1\n",
+       "1422.0       1\n",
+       "2496.0       1\n",
+       "1950.0       1\n",
+       "Name: count, Length: 121, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['engine'].value_counts()"
+   ]
   }
  ],
  "metadata": {
